Laboratorium 4 MVC Home screen shows all auctions

--- a/app/src/main/webapp/admin/admin.xhtml
+++ b/app/src/main/webapp/admin/admin.xhtml
@@ -33,7 +33,7 @@
                 <a class="container-login100-form-btn" href="categoryList.xhtml">Category list</a>
             </div>
             <div class="container-login100-form-btn">
-                <a class="container-login100-form-btn" href="../user/createPhoto.xhtml">Create product</a>
+                <a class="container-login100-form-btn" href="../user/profile.xhtml">Go to user account</a>
             </div>
 
         </div>
