--- a/app/src/main/webapp/user/auctionList.xhtml
+++ b/app/src/main/webapp/user/auctionList.xhtml
@@ -14,7 +14,7 @@
         <ui:define name="content">
         <div class="topnav">
             <a href="../index.xhtml">Home</a>
-            <a href="createPhoto.xhtml">Create product</a>
+            <a href="createAuction.xhtml">Create product</a>
             <a class="active" href="auctionList.xhtml">Your products</a>
             <a href="../admin/admin.xhtml">Profile</a>
             <a href="../login.xhtml">Log in</a>
@@ -32,7 +32,6 @@
                             <f:param name="title" value="#{auction.title}"/>
                             <f:param name="opis" value="#{auction.description}"/>
                             <f:param name="price" value="#{auction.price}"/>
-                            <f:param name="photo" value="#{auction.photo}"/>
                             <f:param name="category" value="#{auction.category_id}"/>
                             <h:outputText value="Edit #{auction.title}"/>
                         </h:link>
@@ -49,3 +48,52 @@
     </h:body>
 </f:view>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
