--- a/app/src/main/webapp/user/editAuction.xhtml
+++ b/app/src/main/webapp/user/editAuction.xhtml
@@ -27,7 +27,7 @@
     <ui:define name="content">
     <div class="topnav">
         <a href="../index.xhtml">Home</a>
-        <a class="active" href="createPhoto.xhtml">Create product</a>
+        <a class="active" href="createAuction.xhtml">Create product</a>
         <a href="auctionList.xhtml">Your products</a>
         <a href="../admin/admin.xhtml">Profile</a>
         <a href="../login.xhtml">Log in</a>
@@ -70,7 +70,7 @@
                     </div>
 
                     <div class="container-login100-form-btn">
-                        <h:commandButton value="Edit" class="login100-form-btn" action="#{auctionController.save}"/>
+                        <h:commandButton value="Edit" class="login100-form-btn" action="#{auctionController.edit}"/>
                     </div>
                 </h:form>
             </div>
