--- a/app/src/main/webapp/user/profile.xhtml
+++ b/app/src/main/webapp/user/profile.xhtml
@@ -12,7 +12,7 @@
         <ui:define name="content">
         <div class="topnav">
             <a href="../index.xhtml">Home</a>
-            <a href="createPhoto.xhtml">Create product</a>
+            <a href="createAuction.xhtml">Create product</a>
             <a href="auctionList.xhtml">Your products</a>
             <a class="active" href="../admin/admin.xhtml">Profile</a>
             <a href="../login.xhtml">Log in</a>
@@ -22,10 +22,13 @@
         </div>
         <div class="wrap-login100">
             <div class="container-login100-form-btn">
-                <a class="container-login100-form-btn" href="editAuction.xhtml">Create product</a>
+                <a class="container-login100-form-btn" href="createAuction.xhtml">Create product</a>
             </div>
             <div class="container-login100-form-btn">
                 <a class="container-login100-form-btn" href="auctionList.xhtml">Your products</a>
+            </div>
+            <div class="container-login100-form-btn">
+                <a class="container-login100-form-btn" href="createParameter.xhtml">Add parameter</a>
             </div>
         </div>
 
