--- a/app/src/main/webapp/user/createPhoto.xhtml
+++ b/app/src/main/webapp/user/createPhoto.xhtml
@@ -12,7 +12,7 @@
     <ui:define name="content">
     <div class="topnav">
         <a href="../index.xhtml">Home</a>
-        <a class="active" href="createPhoto.xhtml">Create product</a>
+        <a class="active" href="createAuction.xhtml">Create product</a>
         <a href="auctionList.xhtml">Your products</a>
         <a href="../admin/admin.xhtml">Profile</a>
         <a href="../login.xhtml">Log in</a>
@@ -27,6 +27,9 @@
                 <h:form class="login100-form validate-form">
 
                     <div style="text-align: center;"><h:outputLabel value="Add photo" style="align-self: center; font-size: large"/></div>
+                    <h:selectOneMenu value="#{photoController.photoRequest.auction_id}" class="input100">
+                        <f:selectItems value="#{listAuctionController.auctionListByUser}" var="auction" itemLabel="#{auction.title}" itemValue="#{auction.id}"/>
+                    </h:selectOneMenu>
                     <div class="wrap-input100">
                         <h:outputLabel value="Photo link"/>
                         <h:inputText value="#{photoRequest.link}"  class="input100" required="true"/>
@@ -36,10 +39,10 @@
                         <h:commandButton value="Add photo" class="login100-form-btn" action="#{photoController.save}"/>
                     </div>
                 </h:form>
-                <h:outputText value="If you had uploaded this picture before, tap "/><a href="createParameter.xhtml">here</a>
             </div>
         </div>
     </div>
+
 
         <ui:insert name="js">
             <ui:include src="../jsf/js.xhtml"></ui:include>
@@ -48,9 +51,6 @@
     </ui:composition>
 </h:body>
 </html>
-
-
-
 
 
 
