--- a/app/src/main/webapp/user/auctionList.xhtml
+++ b/app/src/main/webapp/user/auctionList.xhtml
@@ -8,6 +8,10 @@
 
 
 
+
+
+
+
     <h:body>
         <ui:composition template="../jsf/basic.xhtml">
         <ui:param name="title" value="Products"/>
@@ -25,21 +29,55 @@
         <div class="wrap-login100">
             <div class = "main">
 
-                <div class="list-group">
-                    <ui:repeat value="#{listAuctionController.auctionListByUser}" var="auction">
-                        <h:link styleClass="list-group-item list-group-item-action" outcome="editAuction">
-                            <f:param name="id" value="#{auction.id}"/>
-                            <f:param name="title" value="#{auction.title}"/>
-                            <f:param name="opis" value="#{auction.description}"/>
-                            <f:param name="price" value="#{auction.price}"/>
-                            <f:param name="category" value="#{auction.category_id}"/>
-                            <h:outputText value="Edit #{auction.title}"/>
-                        </h:link>
-                    </ui:repeat>
-                </div>
+                <ui:repeat value="#{listAuctionController.auctionListByUser}" var="auction">
+                    <h:link outcome="editAuction">
+                        <f:param name="id" value="#{auction.id}"/>
+                        <f:param name="name" value="#{auction.title}"/>
+                        <f:param name="opis" value="#{auction.description}"/>
+                        <f:param name="price" value="#{auction.price}"/>
+                        <f:param name="category" value="#{auction.category_id}"/>
 
+
+                        <h:panelGroup styleClass="list-group-item list-group-item-action">
+                            <h:panelGroup>
+                                <h:outputLabel style="font-weight:bold">Name: </h:outputLabel>
+                                <h:outputText value="#{auction.title}" style="font-weight:bold"/>
+                            </h:panelGroup><br/>
+
+                            <h:panelGroup>
+                                <h:outputLabel style="font-weight:bold">Description</h:outputLabel><br/>
+                                <h:outputText value="#{auction.description}"/>
+                            </h:panelGroup><br/>
+
+                            <h:panelGroup>
+                                <h:outputLabel style="font-weight:bold">Price</h:outputLabel>
+                                <h:outputText value="#{auction.price}"/>
+                            </h:panelGroup><br/>
+
+
+
+                            <ui:repeat value="#{listAuctionController.getPhotoByAuctionId(auction.id)}" var="photo">
+                                <f:param name="photo" value="#{photo.link}"/>
+                                <h:panelGroup>
+                                    <h:graphicImage value="#{photo.link}" style="width:100px"/>
+                                </h:panelGroup><br/>
+                            </ui:repeat>
+
+                            <h:outputLabel style="font-weight:bold">Parameters: </h:outputLabel>
+                            <ui:repeat value="#{listAuctionController.findByAuctionId(auction.id)}" var="auctionParameter">
+                                <f:param name="auction" value="#{auctionParameter.value}"/>
+                                <h:panelGroup>
+                                  <h:outputText value="#{auctionParameter.value}"/>
+                                </h:panelGroup><br/>
+                            </ui:repeat>
+                        </h:panelGroup>
+                    </h:link>
+                </ui:repeat>
             </div>
         </div>
+
+
+
             <ui:insert name="js">
                 <ui:include src="../jsf/js.xhtml"></ui:include>
             </ui:insert>
